Disabeld button for paginator

--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_MPG/styles/appearance.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_MPG/styles/appearance.css
@@ -531,6 +531,12 @@ body .wrapper {
 	margin-top:0.7272em;
 	background-color:#888B8B;
 }
+
+.pageBrowser a.actual,
+.pageBrowser span.actual {
+	color: #888B8B;
+}
+
 .pageBrowser :disabled {
     color: #888B8B;
 	cursor:default;
