--- a/pubman/pubman_presentation/src/main/webapp/submission/SubmissionStart.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/submission/SubmissionStart.jspf
@@ -135,7 +135,7 @@
 		<span class="free_area0_p8 endline itemHeadline">
 			<b>
 				<h:commandLink id="lnkSubmission_lnkImport" title="#{tip.submission_lnkImport}" action="#{EasySubmission.newImport}">
-					<h:outputText value="#{lbl.EasySubmission_lblFetchMetadata}" rendered="#{DepositorWSSessionBean.newSubmission and ContextListSessionBean.depositorContextListSize>0}"/>
+					<h:outputText value="#{lbl.submission_lnkImport}" rendered="#{DepositorWSSessionBean.newSubmission and ContextListSessionBean.depositorContextListSize>0}"/>
 				</h:commandLink>
 			</b>
 		</span>
