PUBMAN-1189 fixed: Merge "multiple import" and "single import" pages
Former-commit-id: 80c310849c19a658ea10d06175238a34b30725e0

--- a/pubman/pubman_presentation/src/main/webapp/home/mpg/StartPageLoggedIn.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/home/mpg/StartPageLoggedIn.jspf
@@ -173,7 +173,7 @@
 				</h:commandLink>
 			</li> 
 			<li>... <h:commandLink id="lnkImport_jp" title="#{tip.submission_lnkImport}" action="#{EasySubmission.newImport}">
-					<h:outputText value="#{lbl.EasySubmission_lblFetchMetadata}" rendered="#{DepositorWSSessionBean.newSubmission and ContextListSessionBean.depositorContextListSize>0}" />
+					<h:outputText value="#{lbl.submission_lnkImport}" rendered="#{DepositorWSSessionBean.newSubmission and ContextListSessionBean.depositorContextListSize>0}" />
 				</h:commandLink> 
 			</li>
 			<li>... <h:commandLink id="lnkNewSubmission_jp" title="#{lbl.Home_Link_FullSub}" action="#{CreateItem.newSubmission}" immediate="true">
@@ -223,7 +223,7 @@
 					<h:outputText value="#{lbl.Home_Link_EasySub}" rendered="#{DepositorWSSessionBean.newSubmission and ContextListSessionBean.depositorContextListSize>0}" />
 				</h:commandLink> </li>
 			<li>... <h:commandLink id="lnkImport_es" title="#{tip.submission_lnkImport}" action="#{EasySubmission.newImport}">
-					<h:outputText value="#{lbl.EasySubmission_lblFetchMetadata}" rendered="#{DepositorWSSessionBean.newSubmission and ContextListSessionBean.depositorContextListSize>0}" />
+					<h:outputText value="#{lbl.submission_lnkImport}" rendered="#{DepositorWSSessionBean.newSubmission and ContextListSessionBean.depositorContextListSize>0}" />
 				</h:commandLink></li> 
 			<li>... <h:commandLink id="lnkNewSubmission_es" title="#{lbl.Home_Link_FullSub}" action="#{CreateItem.newSubmission}" immediate="true">
 					<h:outputText value="#{lbl.submission_lnkNewSubmission}" rendered="#{DepositorWSSessionBean.newSubmission and ContextListSessionBean.depositorContextListSize>0}" />
