--- a/pubman/pubman_presentation/src/main/webapp/submission/SubmissionStart.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/submission/SubmissionStart.jspf
@@ -53,7 +53,7 @@
 				</h:commandLink>
 				<h:outputText styleClass="seperator void" />
 				<h:commandLink id="lnkSubmission_lnkImportMenu" title="#{tip.submission_lnkImport}" action="#{EasySubmission.newImport}">
-					<h:outputText value="#{lbl.EasySubmission_lblFetchMetadata}" rendered="#{DepositorWSSessionBean.newSubmission and ContextListSessionBean.depositorContextListSize>0}"/>
+					<h:outputText value="#{lbl.submission_lnkImport}" rendered="#{DepositorWSSessionBean.newSubmission and ContextListSessionBean.depositorContextListSize>0}"/>
 				</h:commandLink>
 				<h:panelGroup rendered="#{LoginHelper.isModerator and DepositorWSSessionBean.newSubmission and ContextListSessionBean.depositorContextListSize>0}">
 					<h:outputText styleClass="seperator void" />
