--- a/pubman/pubman_presentation/src/main/webapp/easySubmission/steps/Step2.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/easySubmission/steps/Step2.jspf
@@ -61,10 +61,10 @@
 				</h:commandLink>
 				<h:outputText styleClass="seperator void" />
 				<h:commandLink id="lnkImport" title="#{tip.submission_lnkImport}" action="#{EasySubmission.newImport}" rendered="#{EasySubmissionSessionBean.currentSubmissionMethod != 'FETCH_IMPORT'}">
-					<h:outputText value="#{lbl.EasySubmission_lblFetchMetadata}" rendered="#{DepositorWSSessionBean.newSubmission and ContextListSessionBean.depositorContextListSize>0}"/>
+					<h:outputText value="#{lbl.submission_lnkImport}" rendered="#{DepositorWSSessionBean.newSubmission and ContextListSessionBean.depositorContextListSize>0}"/>
 				</h:commandLink>
 				<h:panelGroup styleClass=" " rendered="#{EasySubmissionSessionBean.currentSubmissionMethod == 'FETCH_IMPORT'}">
-					<h:outputText value="#{lbl.EasySubmission_lblFetchMetadata}" rendered="#{DepositorWSSessionBean.newSubmission and ContextListSessionBean.depositorContextListSize>0}"/>
+					<h:outputText value="#{lbl.submission_lnkImport}" rendered="#{DepositorWSSessionBean.newSubmission and ContextListSessionBean.depositorContextListSize>0}"/>
 				</h:panelGroup>
 				<h:outputText styleClass="seperator void" />
 				<h:commandLink id="lnkMultipleImport"  title="#{tip.submission_lnkMultipleImport}" action="#{MultipleImport.newImport}">
