--- a/pubman/pubman_presentation/src/main/webapp/easySubmission/steps/Step3Import.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/easySubmission/steps/Step3Import.jspf
@@ -54,7 +54,7 @@
 			</h:commandLink>
 			<h:outputText styleClass="seperator void" />
 			<span>
-				<h:outputText value="#{lbl.EasySubmission_lblFetchMetadata}" rendered="#{DepositorWSSessionBean.newSubmission and ContextListSessionBean.depositorContextListSize>0}"/>
+				<h:outputText value="#{lbl.submission_lnkImport}" rendered="#{DepositorWSSessionBean.newSubmission and ContextListSessionBean.depositorContextListSize>0}"/>
 			</span>
 			<h:outputText styleClass="seperator void" />
 			<h:commandLink id="lnkMultipleImport" title="#{tip.submission_lnkMultipleImport}" action="#{MultipleImport.newImport}">
@@ -110,7 +110,7 @@
 	<div class="full_area0 fullItem">
 		<div class="full_area0 itemBlock noTopBorder">
 			<h3 class="xLarge_area0_p8 endline blockHeader">
-				<h:outputText value="#{lbl.EasySubmission_lblFetchMetadata}" rendered="#{EasySubmission.disableBibtexFields}"/>
+				<h:outputText value="#{lbl.submission_lnkImport}" rendered="#{EasySubmission.disableBibtexFields}"/>
 				<h:outputText value="#{lbl.EasySubmission_lblImportMetadata}" rendered="#{EasySubmission.disableExternalFields}"/>
 			</h3>
 			<span class="seperator"></span>
