--- a/pubman/pubman_presentation/src/main/webapp/viewItem/FilesGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/viewItem/FilesGroup.jspf
@@ -84,6 +84,18 @@
 				</div>
 			</div>
 </h:panelGroup>
+<%-- File Permalink --%>
+			<h:panelGroup layout="block" styleClass="free_area0 endline itemLine">
+				<b class="xLarge_area0_p8 endline labelLine">
+					<h:outputText value="#{lbl.ViewItemFull_lblCiteItemAs}"/><span class="noDisplay">: <br /></span>
+				</b>
+				<span class="xHuge_area0 xTiny_marginLExcl endline">
+					<h:outputLink id="lnkFileHandle" value="#{ViewItemFull.resolveHandleService}#{file.file.pid}" rendered="#{ViewItemFull.isStateReleased and file.file.pid != null}">
+						<h:outputText value="#{ViewItemFull.resolveHandleService}#{file.file.pid}"/>
+					</h:outputLink>
+					<h:outputText value="#{lbl.lbl_noEntry}" rendered="#{!ViewItemFull.isStateReleased or file.file.pid == null}"/>
+				</span>
+			</h:panelGroup>
 <%-- File description --%>
 			<h:panelGroup layout="block" styleClass="free_area0 endline itemLine">
 				<b class="xLarge_area0_p8 endline labelLine">
