--- a/pubman/pubman_presentation/src/main/webapp/search/AdvancedSearchEdit.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/search/AdvancedSearchEdit.jspf
@@ -271,11 +271,26 @@
 						
 						<h:panelGroup layout="block" styleClass="quad_area0">
 							<h:panelGroup styleClass="quad_area0 selectionBox">&#160;</h:panelGroup>
-							<span class="tooltip">&#160;</span>
+							
 							<h:panelGroup layout="block" styleClass="min_imgArea selectboxIcon">&#160;</h:panelGroup>
 						</h:panelGroup>
-						<h:selectOneMenu id="selectGenre" onchange="updateSelectionBox(this);" value="#{criterion.searchString}">
+						<h:selectOneMenu id="selectGenre" onchange="updateSelectionBox(this);" value="#{criterion.selectedEnumString}">
 							<f:selectItems value="#{AdvancedSearchBean.genreListMenu}" />
+						</h:selectOneMenu>
+					</h:panelGroup>
+					
+					
+					 <!-- input for review method-->
+					<h:outputLabel id="lblReviewMethodSearchTerm" styleClass="small_label label_keyword" value=" "  rendered="#{criterion.searchCriterion == 'REVIEW_METHOD'}"/>
+	                <h:panelGroup layout="block" styleClass="quad_area1 endline selectContainer" rendered="#{criterion.searchCriterion == 'REVIEW_METHOD'}">
+						
+						<h:panelGroup layout="block" styleClass="quad_area0">
+							<h:panelGroup styleClass="quad_area0 selectionBox">&#160;</h:panelGroup>
+							
+							<h:panelGroup layout="block" styleClass="min_imgArea selectboxIcon">&#160;</h:panelGroup>
+						</h:panelGroup>
+						<h:selectOneMenu id="selectReviewMethod" onchange="updateSelectionBox(this);" value="#{criterion.selectedEnumString}">
+							<f:selectItems value="#{AdvancedSearchBean.reviewMethodListMenu}" />
 						</h:selectOneMenu>
 					</h:panelGroup>
 	                
@@ -522,9 +537,57 @@
 										default:
 											disableEmbargo($pb(obj).parent().next());
 									}
+
+									
+								}
+
+								function toggleEmbargoCheckbox() {
+
+
+									console.log($pb('input.visibilityCheckbox.PRIVATE').attr('checked'))
+									if($pb('input.visibilityCheckbox.PRIVATE').attr('checked') || $pb('input.visibilityCheckbox.AUDIENCE').attr('checked'))
+									{
+										console.log('enable');
+										enableEmbargo($pb('span.fileCriterionHasEmbargoDate'));
+									}
+									else
+									{
+										disableEmbargo($pb('span.fileCriterionHasEmbargoDate'));
+									}
+									
+								
+
 								}
 							</script>
 							<h:outputLabel id="lblComponentVisibilityOptions" styleClass="medium_label clear" value="#{lbl.adv_search_fileComponentVisibility}" style="margin-top:0.7272em;"/>
+							
+							
+							<span class="free_area0 clear">
+						
+								<a4j:repeat value="#{AdvancedSearchBean.componentVisibilityListSearchCriterion.enumList}" var="visibility" rows="0">
+									<h:panelGroup styleClass="double_checkbox xTiny_marginRIncl">
+										<c:set var="label" value="ENUM_SELECTCOMPONENTVISIBILITY_SELECT_COMPONENT_#{visibility}"/>
+										<h:selectBooleanCheckbox styleClass="visibilityCheckbox #{visibility}" id="visibilityCriterion" value="#{AdvancedSearchBean.componentVisibilityListSearchCriterion.enumMap[visibility]}" onchange="toggleEmbargoCheckbox();">
+										</h:selectBooleanCheckbox>
+										<h:outputLabel title="#{lbl[label]}" value="#{lbl[label]}" for="visibilityCriterion" />
+									</h:panelGroup>
+								</a4j:repeat>
+							</span>
+							<span class="double_checkbox fileCriterionHasEmbargoDate" style="margin-top:0.4545em;">
+									<h:selectBooleanCheckbox id="fileCriterionHasEmbargoDate" value="#{AdvancedSearchBean.embargoDateAvailableSearchCriterion.withEmbargoDate}"/>
+									<h:outputLabel for="fileCriterionHasEmbargoDate" value="#{lbl.adv_search_abb_fileComponentEmbargoDate}" title="#{lbl.adv_search_fileComponentEmbargoDate}"/>
+							</span>
+							
+							
+							
+							
+							
+							
+							
+							
+							
+							<!--  
+							
 							<span class="large_area0 tiny_marginRIncl">
 								<h:panelGroup layout="block" styleClass="large_area1 endline selectContainer">
 									<h:panelGroup layout="block" styleClass="large_area0">
@@ -540,10 +603,11 @@
 								</h:panelGroup>
 								
 								<span class="double_checkbox" style="margin-top:0.4545em;">
-									<h:selectBooleanCheckbox id="fileCriterion_hasEmbargoDate" value="#{AdvancedSearchBean.embargoDateAvailableSearchCriterion.withEmbargoDate}" />
-									<h:outputLabel for="fileCriterion_hasEmbargoDate" value="#{lbl.adv_search_abb_fileComponentEmbargoDate}" title="#{lbl.adv_search_fileComponentEmbargoDate}"/>
+									<h:selectBooleanCheckbox id="fileCriterion_hasEmbargoDate1" value="#{AdvancedSearchBean.embargoDateAvailableSearchCriterion.withEmbargoDate}" />
+									<h:outputLabel for="fileCriterion_hasEmbargoDate1" value="#{lbl.adv_search_abb_fileComponentEmbargoDate}" title="#{lbl.adv_search_fileComponentEmbargoDate}"/>
 								</span>
 							</span>
+							-->
 						</span>
 						
 						
@@ -570,6 +634,21 @@
 	                    <span class="double_area0 tiny_marginRIncl">
 							<h:outputLabel id="lblContentCategories" styleClass="double_label" value="#{lbl.adv_search_fileContentCategory}"/>
 							
+							<span class="free_area0 clear">
+						
+								<a4j:repeat value="#{AdvancedSearchBean.componentContentCategoryListSearchCriterion.enumList}" var="cc" rows="0">
+									<h:panelGroup styleClass="double_checkbox xTiny_marginRIncl">
+										<c:set var="label" value="ENUM_CONTENTCATEGORY_#{cc}"/>
+										<h:selectBooleanCheckbox styleClass="visibilityCheckbox #{cc}" id="contentCategoryCriterion" value="#{AdvancedSearchBean.componentContentCategoryListSearchCriterion.enumMap[cc]}">
+										</h:selectBooleanCheckbox>
+										<h:outputLabel title="#{lbl[label]}" value="#{lbl[label]}" for="contentCategoryCriterion" />
+									</h:panelGroup>
+								</a4j:repeat>
+							</span>
+							
+							
+							
+							<!-- 
 							<h:panelGroup layout="block" styleClass="large_area1 endline selectContainer clear">
 								<h:panelGroup layout="block" styleClass="large_area0">
 									<h:panelGroup styleClass="large_area0 selectionBox">&#160;</h:panelGroup>							
@@ -584,6 +663,7 @@
 								<h:selectBooleanCheckbox id="fileCriterion_excludeCategory" value="#{AdvancedSearchBean.excludeComponentContentCategory}"/>
 								<h:outputLabel id="lblFileCriterion_excludeCategory" value="#{lbl.adv_search_fileExcludeCategory}" for="fileCriterion_excludeCategory" />
 							</span>	
+							-->
 						</span>
 					</span>
 				</span>
