--- a/pubman/pubman_presentation/src/main/webapp/search/AdvancedSearchEdit.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/search/AdvancedSearchEdit.jspf
@@ -179,10 +179,12 @@
 									<h:panelGroup styleClass="large_area0 selectionBox">&#160;</h:panelGroup>									
 									<h:panelGroup layout="block" styleClass="min_imgArea selectboxIcon">&#160;</h:panelGroup>
 								</h:panelGroup>
-								<h:selectOneMenu id="selCriterionType" styleClass="replace" value="#{criterion.searchCriterion}" valueChangeListener="#{AdvancedSearchBean.changeCriterion}">
+								<h:selectOneMenu id="selCriterionType" styleClass="replace" value="#{criterion.searchCriterion}">
 									<f:selectItems value="#{AdvancedSearchBean.criterionTypeListMenu}" />
-									<f:attribute name="indexOfCriterion" value="#{index}"/>
-									<a4j:support event="onchange" reRender="editSearch" />
+									
+									<a4j:support event="onchange" reRender="editSearch" action="#{AdvancedSearchBean.changeCriterionAction}">
+										<a4j:actionparam name="indexOfCriterion" value="#{index}"/>
+									</a4j:support>
 								</h:selectOneMenu>
 							</h:panelGroup>
 					</h:panelGroup>
@@ -264,7 +266,7 @@
 									<span class="tooltip">&#160;</span>
 									<div class="min_imgArea selectboxIcon">&#160;</div>
 								</div>
-								<h:selectOneMenu id="selSelectClassificationType" onfocus="updateSelectionBox(this);" value="" styleClass="endline vocabulary" onchange="updateSelectionBox(this);">
+								<h:selectOneMenu id="selSelectClassificationType" onfocus="updateSelectionBox(this);" value="#{criterion.classificationType}" styleClass="endline vocabulary" onchange="updateSelectionBox(this);">
 									<f:selectItems value="#{AdvancedSearchBean.subjectTypesListMenu}" />
 								</h:selectOneMenu>
 							</h:panelGroup>
