--- a/pubman/pubman_presentation/src/main/webapp/affiliation/AffiliationTree.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/affiliation/AffiliationTree.jspf
@@ -60,7 +60,7 @@
 						<h:panelGroup layout="block" styleClass="std_imgArea affTreeOUIcon mpgUnit" style="float: left;" rendered="#{node.mps}"></h:panelGroup>
 						<h:panelGroup layout="block" styleClass="std_imgArea affTreeOUIcon organisationalUnit" style="float: left;" rendered="#{!node.mps && node.topLevel}"></h:panelGroup>
 						<h:graphicImage value="../images/publications_22.gif" height="22px" width="22px"  style="float: left;" rendered="#{!node.topLevel}"/>
-						<h:commandLink id="lnkAffiliationName" styleClass="line-height: 2.10em;" value="#{node.name}" action="#{node.startSearch}"/>
+						<h:commandLink id="lnkAffiliationName" style="line-height: 2.10em;" value="#{node.shortenedName}" title="#{node.name}" action="#{node.startSearch}"/>
 						<h:outputText value=" (#{lbl.AffilitationTree_ouClosed})" rendered="#{node.isClosed}"/>
 						&#160;
 						<h:outputLink id="lnkAffiliationDetails" title="#{tip.Affiliation_details}" value="" onclick="openCenteredWindow('#{ApplicationBean.appContext}AffiliationDetailPage.jsp?id=#{node.reference.objectId}', 980, 400, 'Details');return false">   [<h:outputText value="#{lbl.AffiliationTree_lnkDescription}"/>]</h:outputLink>
