Resolved [PUBMAN-2500] - Table view: Titel hover not displayed like in bibliographic view
Former-commit-id: e13513786db985ed5b19a623767df05630c730f9

--- a/pubman/pubman_presentation/src/main/webapp/list/gridList.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/list/gridList.jspf
@@ -263,7 +263,7 @@ All rights reserved. Use is subject to license terms.
 		      	<td class="free_area0 endline">
 		      		<span class="seperator"></span>
 		      		<span class="free_area0_p8 itemHeadline">
-						<h:outputLink title="#{tip.list_item}" value="#{item.link}">
+						<h:outputLink title="#{item.fullTitle}" value="#{item.link}">
  							<b><h:outputText value="#{item.fullTitle}" converter="HTMLSubSupShortTitleConverter" escape="false"/></b>
 	 					</h:outputLink>
 		      		</span>
